--- a/0.4: New note diagram.md
+++ b/0.4: New note diagram.md
@@ -1,1 +1,38 @@
+sequenceDiagram
+    participant browser
+    participant server
+
+    Note right of browser: User writes a note in the text field and clicks the Save button
+
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    activate server
+    Note left of server: Server saves the new note data<br/>and responds with a redirect
+    server-->>browser: HTTP 302 Redirect to /notes
+    deactivate server
+
+    Note right of browser: The browser follows the redirect and reloads the Notes page
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+    activate server
+    server-->>browser: HTML document
+    deactivate server
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+    activate server
+    server-->>browser: the CSS file
+    deactivate server
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    activate server
+    server-->>browser: the JavaScript file
+    deactivate server
+
+    Note right of browser: The browser executes JavaScript<br/>which requests the updated notes list
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+    activate server
+    server-->>browser: Updated JSON data including the new note
+    deactivate server
+
+    Note right of browser: The browser executes the callback function<br/>and re-renders the updated notes list
 
