--- a/0.4: New note diagram.md
+++ b/0.4: New note diagram.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     participant browser
     participant server
@@ -35,4 +36,5 @@ sequenceDiagram
     deactivate server
 
     Note right of browser: The browser executes the callback function<br/>and re-renders the updated notes list
+```
 
